--- a/login/login.html
+++ b/login/login.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <h3> Iniciar Sesión</h3>
+    <form action="" method="post">
+       <div>
+            <label for="email"> correo electrónico</label>
+            <input type="email" name="email" id="email" placeholder="ejemplo@correo.com">
+       </div> 
+       <div>
+            <div>
+                <label for="password">contraseña</label>
+                <input type="password" id="password" placeholder="****">
+            </div>  
+            <div>
+                <a href="#">¿Olvidaste tu contraseña?</a>
+            </div>
+       </div>
+       <div>
+            <button type="submit">Iniciar sesión</button>
+       </div>
+       
+    </form>
     <script src="login.js"></script>
 </body>
 </html>
