--- a/login/login.html
+++ b/login/login.html
@@ -7,26 +7,45 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <h3> Iniciar Sesión</h3>
-    <form action="" method="post">
-       <div>
-            <label for="email"> correo electrónico</label>
-            <input type="email" name="email" id="email" placeholder="ejemplo@correo.com">
-       </div> 
-       <div>
-            <div>
-                <label for="password">contraseña</label>
-                <input type="password" id="password" placeholder="****">
-            </div>  
-            <div>
-                <a href="#">¿Olvidaste tu contraseña?</a>
-            </div>
-       </div>
-       <div>
-            <button type="submit">Iniciar sesión</button>
-       </div>
-       
-    </form>
+    <div>
+        <h1>Eco Trakers</h1>
+    </div>
+    <div>
+        <h3> Iniciar Sesión</h3>
+        <form action="" method="post">
+        <div>
+                <label for="email"> correo electrónico</label>
+                <input type="email" name="email" id="email" placeholder="ejemplo@correo.com">
+        </div> 
+        <div>
+                <div>
+                    <label for="password">contraseña</label>
+                    <input type="password" id="password" placeholder="****">
+                </div>  
+                <div>
+                    <a href="#">¿Olvidaste tu contraseña?</a>
+                </div>
+        </div>
+        <div>
+            <input type="checkbox" name="rememberMe" id="rememberMe">
+            <label for="rememberMe">Recordarme</label>
+        </div>
+        <div>
+                <button type="submit">Iniciar sesión</button>
+        </div>
+        
+        </form>
+        <hr>
+        <div>
+            <button type="button" class="btn btn-danger btn-block" onclick="onSignIn(event)">
+                <div class="g-signin2" data-onsuccess="onSignIn"> Inicia sesión con Google </div>
+            </button>
+        </div>    
+    </div>
+    <div>
+        <h4>¿No tienes una cuenta?</h4>        
+        <a href="#">Registrate</a>
+    </div>
     <script src="login.js"></script>
 </body>
 </html>
