arreglo checbok a switch

--- a/login/login.html
+++ b/login/login.html
@@ -28,11 +28,11 @@
                         <input type="password" id="password" placeholder="****" class="mw-100 rounded-3 border border-opacity-75" style="width: 200%">
                     </div>
             </div>
-            <div class="py-3 fs-6 fw-lighter">
-                <input type="checkbox" name="rememberMe" id="rememberMe" class=" rounded-3 border border-opacity-100">
+            <div class="py-3 fs-6 fw-lighter form-check form-switch">
+                <input type="checkbox" role="switch" name="rememberMe" id="rememberMe" class=" form-check-input border-success-subtle bg-success">
                 <label for="rememberMe">Recordarme</label>
             </div>
-            <div>
+            <div class="pt-3">
                     <button type="submit" class="btn btn-primary">Iniciar sesión</button>
             </div>
             
