maquetacion y diseños de la pagina de registro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <a href="login/login.html">Iniciar seción</a>
+    <a href="logup/logup.html">Registrarse</a>
+    <a href="login/login.html">Iniciar sesión</a>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 </body>
