--- a/login/login.html
+++ b/login/login.html
@@ -30,7 +30,7 @@
                             <a href="/login/forgot-password.html" class="text-end fw-light text-decoration-none d-flex justify-content-end">¿Olvidaste tu contraseña?</a> 
                         </div>  
                         <div class="d-block ">
-                            <input type="password" id="password" placeholder="****" class="mw-100 rounded-3 border border-opacity-75" style="width: 200%">
+                            <input type="password" id="password" placeholder="********" class="mw-100 rounded-3 border border-opacity-75" style="width: 200%">
                         </div>
                 </div>
                 <div class="py-2 fs-6 fw-lighter form-check form-switch">
@@ -52,7 +52,7 @@
             </div>    
             <div class="d-flex justify-content-start mt-2">
                 <h3 class="fw-light fs-6 ">¿No tienes una cuenta?</h3>        
-                <a href="#" class=" fw-light fs-6 ms-1 ps-1 text-decoration-none">Registrate</a>
+                <a href="/logup/logup.html" class=" fw-light fs-6 ms-1 ps-1 text-decoration-none">Registrate</a>
             </div>
         
         </div>
