--- a/login/login.html
+++ b/login/login.html
@@ -17,7 +17,7 @@
                 <button type="button" class="btn-close"  aria-label="Close"></button>
             </a>
 
-            <h3 class="fw-semibold py-3 mb-2">Iniciar Sesión en Eco Trackers</h3>
+            <h3 class="fw-semibold py-3 mb-2">Iniciar Sesión en EcoTracker</h3>
 
             <form action="" method="post">
                 <div class="fw-medium pb-2">
