arreglo de iconos en footer

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <h3 class="mb-4">Contáctanos</h3>
+                    <h3 class="mt-4">Contáctanos</h3>
                     <div>
                         <p class="fs-6">Dirección física: Av. EcoStreet, 123, Ciudad Verde, País.</p>
                         <p class="fs-6">Correo Electrónico: info@ecotracker.com</p>
@@ -115,25 +115,27 @@
                     <form>
                         <h4 class="mt-4">¿Cómo podemos ayudarte?</h4>
                         <div class="mb-3">
-                            <input type="text" class="form-control fs-6" placeholder="Nombre">
+                            <input type="text" class="form-control fs-6 bg-dark-subtle rounded-pill border border-opacity-75" placeholder="Nombre">
                         </div>
                         <div class="mb-3">
-                            <input type="email" class="form-control fs-6" placeholder="Correo Electrónico">
+                            <input type="email" class="form-control fs-6 bg-dark-subtle rounded-pill border border-opacity-75" placeholder="ejemplo@correo.com">
                         </div>
                         <div class="mb-3">
-                            <textarea class="form-control fs-6" rows="4" placeholder="Mensaje"></textarea>
+                            <textarea class="form-control fs-6 bg-dark-subtle rounded-4 border border-opacity-75" rows="3" placeholder="Mensaje"></textarea>
                         </div>
                         <button type="submit" class="btn btn-success">Enviar</button>
                     </form>
                 </div>
             </div>
             <hr>  
-            <h4 class="fs-4">Síguenos en nuestras redes sociales:</h4>
-            <div class="d-flex justify-content-around mt-3">
-                <a href="#" class="text-white"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="text-white"><i class="fab fa-linkedin"></i></a>
+            <div class="container d-flex justify-content-start align-items-center">
+                <h4 class="fs-6 mb-0 me-3">Síguenos:</h4>
+                <div class="d-flex align-items-center">
+                    <a href="#" class="text-white"><i class="fab fa-facebook fa-lg me-2"></i></a>
+                    <a href="#" class="text-white"><i class="fab fa-instagram fa-lg me-2"></i></a>
+                    <a href="#" class="text-white"><i class="fab fa-twitter fa-lg me-2"></i></a>
+                    <a href="#" class="text-white"><i class="fab fa-linkedin fa-lg me-2"></i></a>
+                </div>
             </div>
         </div>
     </footer>    
@@ -141,5 +143,6 @@
     <script src="js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/ee9da9871f.js" crossorigin="anonymous"></script>
 </body>
 </html>
