--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="mb-3">
                             <textarea class="form-control fs-6 bg-dark-subtle rounded-4 border border-opacity-75" rows="3" placeholder="Mensaje"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-success">Enviar</button>
+                        <button type="submit" class="btn btn-success rounded-pill">Enviar</button>
                     </form>
                 </div>
             </div>
