--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -25,10 +25,10 @@
                     <a class="nav-link link-light mt-2 fw-semibold fs-6" href="login/login.html">Iniciar sesión</a>
                 </li>
                 <li class="nav-item d-block d-sm-none">
-                    <a class="nav-link link-light ms-4 mb-3 fs-6" href="logup/logup.html">Registrarse</a>
+                    <a class="nav-link link-light ms-4 fs-6" href="logup/logup.html">Registrarse</a>
                 </li>
                 <li class="nav-item d-block d-sm-none">
-                    <a class="nav-link link-light ms-4 mb-3 fs-6" href="login/login.html">Iniciar sesión</a>
+                    <a class="nav-link link-light ms-4 fs-6" href="login/login.html">Iniciar sesión</a>
                 </li>
             </ul>
         </nav>
