--- a/login/forgot-password.html
+++ b/login/forgot-password.html
@@ -26,7 +26,7 @@
                 </div> 
                 
                 <div class="py-2">
-                        <button type="submit" class="btn btn-outline-success mw-100 rounded-pill border border-opacity-75" style="width: 200%">Siguiente</button>
+                        <a href="/index.html" class="btn btn-outline-success mw-100 rounded-pill border border-opacity-75" style="width: 200%">Siguiente</a>
                 </div>
                 
             </form>
