--- a/login/login.html
+++ b/login/login.html
@@ -38,7 +38,7 @@
                     <label for="rememberMe">Recordarme</label>
                 </div>
                 <div class="py-2">
-                        <button type="submit" class="btn btn-success mw-100 rounded-pill border border-opacity-75" style="width: 200%">Iniciar sesión</button>
+                        <a href="/home/home.html" class="btn btn-success mw-100 rounded-pill border border-opacity-75" style="width: 200%">Iniciar sesión</a>
                 </div>
                 
             </form>
