--- a/home/home.html
+++ b/home/home.html
@@ -7,10 +7,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/home/home.css">
 </head>
 <body>
+    <header class="navbar navbar-expand-sm d-flex justify-content-between align-items-center mb-5">
+        <h1 class="text-sm-start m-4 text-white fw-bold fs-1">Eco Trackers</h1>
+        <button id="toggleButton" class="navbar-toggler custom-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item d-none d-sm-block">
+                    <a class="nav-link text-white" href="#"> <i class="fas fa-shopping-cart fa-lg me-2" ></i></a>
+                </li>
+                <li class="nav-item dropdown d-none d-sm-block">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-lg me-2"></i></a>
+                    <div class="dropdown-menu dropdown-menu-start border-success-subtle border-3" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-header text-decoration-none fs-4 fw-semibold" href="#">Perfil</a>
+                        <a class="dropdown-item fw-light fs-6" href="#">Historial de compras</a>
+                        <a class="dropdown-item fw-light fs-6" href="#">Configuración</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item fw-light fs-6" href="#">Cerrar sesión</a>
+                    </div>
+                </li>
+                <li class="nav-item d-block d-sm-none">
+                    <a class="nav-link link-light ms-4 fs-6" href="#">Tu carrito</a>
+                </li>
+                <hr class="d-block d-sm-none">
+                <li class="nav-item d-block d-sm-none">
+                    <a class="nav-link link-light ms-4 fs-6" href="#">Historial de compras</a>
+                </li>
+                <li class="nav-item d-block d-sm-none">
+                    <a class="nav-link link-light ms-4 fs-6" href="#">Configuración</a>
+                </li>
+                <hr class="d-block d-sm-none">
+                <li class="nav-item d-block d-sm-none">
+                    <a class="nav-link link-light ms-4 fs-6" href="/index.html">Cerrar sesión</a>
+                </li>
+            </ul>
+        </nav>
+    </header>    
+         
     
+    <script src="/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/ee9da9871f.js" crossorigin="anonymous"></script>
 </body>
 </html>
