inicio de maquetacion de pagina de admin2

--- a/admin/index.html
+++ b/admin/index.html
@@ -29,22 +29,22 @@
         </div>
     </header>
 
-    <nav class="d-md-none bg-success header_home">
+    <nav class="d-md-none header_home">
         <div class="sidebar-sticky">
             <ul class="nav flex-row">
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">
-                        <i class="fas fa-home"></i> <!-- Icono para Inicio -->
+                        <i class="fas fa-home"></i> 
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">
-                        <i class="fas fa-shopping-cart"></i> <!-- Icono para Productos -->
+                        <i class="fas fa-shopping-cart"></i> 
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">
-                        <i class="fas fa-envelope"></i> <!-- Icono para Contacto -->
+                        <i class="fas fa-envelope"></i> 
                     </a>
                 </li>
             </ul>
@@ -57,17 +57,17 @@
             <nav class="col-md-2 d-none d-md-block bg-success">
                 <div class="sidebar-sticky mt-3">
                     <ul class="nav flex-column">
-                        <li class="nav-item">
+                        <li class="nav-item mb-3">
                             <a class="nav-link text-white" href="#">
                                 Inicio
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mb-3">
                             <a class="nav-link text-white" href="#">
                                 Productos
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mb-3">
                             <a class="nav-link text-white" href="#">
                                 Contacto
                             </a>
