validacion de formulariod e olvido contraseña

--- a/login/forgot-password.html
+++ b/login/forgot-password.html
@@ -19,14 +19,14 @@
 
             <h3 class="fw-semibold py-3 mb-2">Recordar contraseña </h3>
 
-            <form action="" method="post">
+            <form id="forgotForm" onsubmit="return validateForgot()">
                 <p class="pb-1">Ingresa el correo electrónico asociado con tu cuenta para cambiar tu contraseña</p>
                 <div class="fw-medium pb-3">
-                        <input type="email" name="email" id="email" placeholder="ejemplo@correo.com" class="d-block mw-100 rounded-3 border border-opacity-75" style="width: 200%">
+                        <input type="email" name="email" id="emailForgot" placeholder="ejemplo@correo.com" class="d-block mw-100 rounded-3 border border-opacity-75" style="width: 200%">
                 </div> 
                 
                 <div class="py-2">
-                        <a href="/index.html" class="btn btn-outline-success mw-100 rounded-pill border border-opacity-75" style="width: 200%">Siguiente</a>
+                        <button type="button" class="btn btn-outline-success mw-100 rounded-pill border border-opacity-75" style="width: 200%" onclick="validateForgot()" >Siguiente</button>
                 </div>
                 
             </form>
