correccion de pagina de admin

--- a/home/home.html
+++ b/home/home.html
@@ -38,7 +38,7 @@
                         <div class="dropdown-menu dropdown-menu-start border-success-subtle border-3" aria-labelledby="navbarDropdown">
                             <a class="dropdown-header text-decoration-none fs-4 fw-semibold" href="#">Perfil</a>
                             <a class="dropdown-item fw-light fs-6" href="#">Historial de compras</a>
-                            <a class="dropdown-item fw-light fs-6" href="#">Configuración</a>
+                            <a class="dropdown-item fw-light fs-6" href="/admin/index.html">Configuración</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item fw-light fs-6" href="/index.html">Cerrar sesión</a>
                         </div>
@@ -51,7 +51,7 @@
                         <a class="nav-link link-light ms-4 fs-6" href="#">Historial de compras</a>
                     </li>
                     <li class="nav-item d-block d-sm-none">
-                        <a class="nav-link link-light ms-4 fs-6" href="#">Configuración</a>
+                        <a class="nav-link link-light ms-4 fs-6" href="/admin/index.html">Configuración</a>
                     </li>
                     <hr class="d-block d-sm-none">
                     <li class="nav-item d-block d-sm-none">
