utilizaciondel storage local para ategorias

--- a/admin/index.html
+++ b/admin/index.html
@@ -68,9 +68,7 @@
                 <div class="sidebar-sticky mt-3">
                     <ul class="nav d-flex flex-column">
                         <li class="nav-item mb-3">
-                            <a class="nav-link text-white" onclick="loadContent('categorias')">
-                                Categorias
-                            </a>
+                            <a class="nav-link text-white" onclick="loadContent('categorias')"> Categorias </a>
                         </li>
                         <li class="nav-item mb-3">
                             <a class="nav-link text-white" onclick="loadContent('inventario')">Inventario</a>
@@ -91,8 +89,8 @@
             </nav>
             
 
-            <main role="main" class="col-md-9 col-lg-12 offset-md-2 m-1">
-                <div class="d-flex flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 ms-3 border-bottom">
+            <main role="main" class=" col-md-9 offset-md-2 m-1">
+                <div class="d-flex flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 ms-3 ">
                     <h1 class="h2"><span id="header-text"></span></h1>
                 </div>
                 <div id="main-content">
@@ -120,7 +118,8 @@
         </div>
     </footer>    
     
-    <script src="/admin/js/script.js"> </script>
+    <script src="./js/script.js"> </script>
+    <script src="./js/categorias.js"> </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://unpkg.com/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
