--- a/admin/index.html
+++ b/admin/index.html
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">
+                    <a class="nav-link text-white" onclick="loadContent('inventario')">
                         <i class="fa-brands fa-stack-overflow"></i>
                     </a>
                 </li>
