--- a/admin/inventario.html
+++ b/admin/inventario.html
@@ -20,6 +20,7 @@
     </div>   
 
     <script src="/admin/js/script.js"> </script>
+    <script src="/admin/js/inventarios.js"> </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://unpkg.com/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
