--- a/home/home.html
+++ b/home/home.html
@@ -31,7 +31,7 @@
             <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item d-none d-sm-block">
-                        <a class="nav-link text-white " href="#"> <i class="fas fa-shopping-cart fa-lg me-2" ></i></a>
+                        <a class="nav-link text-white " href="/home/carrito.html"> <i class="fas fa-shopping-cart fa-lg me-2" ></i></a>
                     </li>
                     <li class="nav-item dropdown d-none d-sm-block">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-lg me-2"></i></a>
@@ -44,7 +44,7 @@
                         </div>
                     </li>
                     <li class="nav-item d-block d-sm-none">
-                        <a class="nav-link link-light ms-4 fs-6" href="#">Tu carrito</a>
+                        <a class="nav-link link-light ms-4 fs-6" href="/home/carrito.html">Tu carrito</a>
                     </li>
                     <hr class="d-block d-sm-none">
                     <li class="nav-item d-block d-sm-none">
